policies/netpol/allow-amqp-from-orders-and-worker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-amqp-from-orders-and-worker
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: orders-api
        - podSelector:
            matchLabels:
              app: orders-worker
      ports:
        - protocol: TCP
          port: 5672
