policies/netpol/allow-ui-from-admin-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-from-admin-namespace
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: admin
      ports:
        - protocol: TCP
          port: 15672
